# IA-Hockie

./: .gitignore  README.md  pyproject.toml  v1-claude.py  v1-deep.py  v1-gemini.py  v1-gpt.py  v1-qwen.py
models/: dqn_airhockey.pth
trained_models/: air_hockey_dqn_20250517_183731.pth  air_hockey_dqn_20250517_183941.pth  air_hockey_dqn_20250518_145056.pth  air_hockey_dqn_20250518_150513.pth  air_hockey_dqn_20250518_152701.pth  air_hockey_dqn_20250518_161237.pth  air_hockey_dqn_20250518_172859.pth  air_hockey_dqn_20250518_174541.pth  air_hockey_dqn_20250518_190331.pth  air_hockey_dqn_20250519_144709.pth  air_hockey_dqn_20250519_145609.pth  air_hockey_dqn_20250519_221953.pth  air_hockey_dqn_20250521_103205.pth  air_hockey_dqn_20250521_130904.pth  air_hockey_dqn_20250521_133300.pth  air_hockey_dqn_20250521_150332.pth  air_hockey_dqn_20250521_155717.pth  air_hockey_dqn_20250521_160847.pth  air_hockey_dqn_20250521_162743.pth  air_hockey_dqn_20250521_183132.pth  air_hockey_dqn_20250521_191954.pth  air_hockey_dqn_20250521_200007.pth
