[project]
name = "ia-hockie"
version = "0.1.0"
description = "A reinforcement learning environment for hockey"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym>=0.26.2",
    "gymnasium>=1.1.1",
    "numpy>=2.2.6",
    "pygame>=2.6.1",
    "scikit-learn>=1.6.1",
    "shimmy>=2.0.0",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
